<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:id="@+id/bg_all_elements_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

                            <TextView
            android:id="@+id/ade_tvTitle"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/lo_sentimos"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/ade_ivError" />

        <TextView
            android:id="@+id/ade_tvMessage"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginHorizontal="24dp"
            android:gravity="center"
            android:text="@string/error"
            android:textColor="@color/gray90"
            android:textSize="16sp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ade_btn_retry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/purple_500"

        android:padding="10dp"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/ade_btn_cancel"
        tools:layout_editor_absoluteX="24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ade_btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/white"

        android:padding="10dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/purple_700"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:strokeColor="@color/purple_700"
        app:strokeWidth="2dp"
        tools:layout_editor_absoluteX="24dp" />

    <ImageView
        android:id="@+id/ade_ivError"
        android:layout_width="match_parent"
        android:layout_height="231dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="34dp"
        android:src="@drawable/dinosaurio"
        app:layout_constraintBottom_toTopOf="@+id/bg_all_elements_dialog"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>