<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="10dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/dinosaurio"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="515dp">


        <TextView
            android:id="@+id/adm_tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/lo_sentimos"
            android:textColor="@color/black"
            android:textSize="26sp"
            app:fontFamily="@font/poppins_semibold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/adm_tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/no_trailers"
            android:textColor="@color/gray90"
            android:textSize="18sp"
            app:fontFamily="@font/poppins_semibold"
            app:layout_constraintBottom_toTopOf="@id/adm_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/adm_tvTitle" />

        <View
            android:id="@+id/adm_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="8dp"
            android:alpha="0.2"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/adm_mbAcceptOnly"
            app:layout_constraintTop_toBottomOf="@+id/adm_tvMessage"
            tools:layout_editor_absoluteX="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/adm_mbAcceptOnly"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_700"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/adm_line" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>